<?xml version="1.0"?>
<package format="2">
  <name>my_project</name>
  <version>0.0.0</version>
  <description>my own project</description>
  <author email="jun@todo.todo">jun</author>
  <maintainer email="jun@todo.todo">jun</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>iiwa_msgs</depend>
  
</package>
